Modified the other recipes to mirror alfredo.html so the image will display online

--- a/recipes/cajun-pasta.html
+++ b/recipes/cajun-pasta.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Cajun Chicken Pasta</h1> 
         <h5><a href=../index.html>Home</a></h5>
-        <img src="../images/cajun-chicken-pasta.webp">
+        <img src="images/cajun-chicken-pasta.webp">
         <h3><em>A creamy cajun chicken pasta that is both delicious and spicy!</em></h3>
         <p>This is a recipe to create a delicious cajun chicken pasta. It can be changed to be as spicy as you want by adjusting the amount of cayenne pepper added.
             If you are looking for something with less bell pepper flavor they can be removed in order to change the dish entirely. This dish is more complex than the chicken alfredo and requires a bit more prep time.
