--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Chicken Alfredo</h1> 
         <h5><a href=../index.html>Home</a></h5>
-        <img src="images/alfredo.webp">
+        <img src="../images/alfredo.webp">
         <h3><em>A creamy chicken alfredo that is just delicious!</em></h3>
         <p>This is a simple recipe for a one pot chicken alfredo. It will be easy to make and is a restaurant quality dish. You simply cook the chicken, add the broth and milk, bring to a boil, and cook the noodles. It will make plenty for 4-8 guests depending on the batch size, and can be customized with shrimp, cajun spices, or any other modifications to suit your tastes.</p>
 
