--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Outback Steakhouse Mac a Roo and Cheese Copycat</h1> 
         <h5><a href=../index.html>Home</a></h5>
-        <img src="images/mac-n-cheese.jpg">
+        <img src="../images/mac-n-cheese.jpg">
         <h3><em>A mac n cheese recipe that copies Outback's kid's mac a roo n cheese with a twist!</em></h3>
         <p>This recipe sets out to imitate Outback's kid's mac n cheese. It is flavorful, creamy, and a crowd pleaser
             It can be modified slightly to also pack an extra spice behind the creamy cheese flavor if this is desired.
